--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -1,28 +1,41 @@
 .promo {
-  padding: 50px 0;
-  background-color: lightsteelblue;
-  border-radius: 10px;
+    padding: 290px 0;
+    margin: 0 auto;
+    text-align: center;
+    background: linear-gradient(0deg, rgba(51, 51, 51, 0.4), rgba(51, 51, 51, 0.4)), url(.jpg);
+    background-image: url(../images/promo.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 
 .promo-inner {
-  margin: 0 auto;
-  width: 1024px;
-
-  @media (max-width: 1279px) {
-    width: auto;
-    max-width: 1024px;
-  }
+    width: 1278px;
+    margin: 0 auto;
+    border: 1px solid red;
 }
 
-.promo-ttl {
-  font-size: $h1-fz-desktop;
-  font-weight: $h1-fw;
+.promo-text {
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 130px;
+    font-size: 72px;
+    line-height: 98px;
+    text-align: center;
+    text-transform: uppercase;
+}
 
-  @media (max-width: 1279px) {
-    font-size: $h1-fz-tablet;
-  }
-
-  @media (max-width: 669px) {
-    font-size: $h1-fz-mobile;
-  }
+.promo-btutton {
+    display: inline-block;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 87px;
+    margin-bottom: 215px;
+    padding: 30px;
+    border-radius: 6px;
+    align-items: center;
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+    background-color: $color-light;
 }
