--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,13 +1,14 @@
 // Fonts
-$font: Arial, "Helvetica Neue", Helvetica, sans-serif;
-
+$font-open: "Open Sans",
+sans-serif;
 $h1-fz-mobile: 20px;
 $h1-fz-tablet: 32px;
 $h1-fz-desktop: 48px;
 $h1-fw: 400;
-
 // colors
-
+$color-dark: rgba(51, 51, 51, 1);
+$color-light:rgba(255, 45, 45, 1);
 // indents
-
+$gap: 20px;
+$gap-half: calc($gap / 2);
 // breakpoints
