--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -4,19 +4,31 @@
     font-style: normal;
     color: rgba(255, 255, 255, 1);
     background-color: #333333;
+    @media (max-width: $mobile-max) {
+        padding: 30px 0;
+    }
 }
 
 .footer-inner {
-    width: 1278px;
-    margin: 0 auto;
-    border: 1px solid red;
+    @include inner;
 }
 
 .footer-wrap {
     display: flex;
+    max-width: 100%;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
+    @media (max-width: $mobile-max) {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .footer-logo {
     margin-right: auto;
+    @media (max-width: $mobile-max) {
+        margin: 0 83px 30px;
+    }
 }
