--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -4,7 +4,11 @@
     left: 0;
     top: 0;
     z-index: 1000;
+    padding: 16px 0;
     background: #333333;
+    @media (max-width: $tablet-max) {
+        padding: 20px 0;
+    }
 }
 
 .header-inner {
@@ -18,4 +22,23 @@
 
 .main-logo {
     margin-right: auto;
+    font-weight: 600;
+    font-size: 42px;
+    line-height: 57px;
+    text-decoration: none;
+    @media (max-width: $tablet-max) {
+        font-size: 36px;
+        line-height: 49px;
+    }
+    @media (max-width: $mobile-max) {
+        font-size: 28px;
+        line-height: 38px;
+    }
+}
+
+.burger {
+    display: none;
+    @media (max-width: $mobile-max) {
+        display: block;
+    }
 }
