--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -1,18 +1,22 @@
 .promo {
-    padding: 290px 0;
-    margin: 0 auto;
+    padding: 200px 0 215px;
+    margin-top: 0 auto;
     text-align: center;
     background: linear-gradient(0deg, rgba(51, 51, 51, 0.4), rgba(51, 51, 51, 0.4)), url(.jpg);
     background-image: url(../images/promo.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    @media (max-width: $tablet-max) {
+        padding: 270px 0 220px;
+    }
+    @media (max-width: $mobile-max) {
+        padding: 180px 0 100px;
+    }
 }
 
 .promo-inner {
-    width: 1278px;
-    margin: 0 auto;
-    border: 1px solid red;
+    @include inner;
 }
 
 .promo-text {
@@ -23,19 +27,32 @@
     line-height: 98px;
     text-align: center;
     text-transform: uppercase;
+    @media (max-width: $tablet-max) {
+        font-size: 54px;
+        line-height: 74px;
+    }
+    @media (max-width: $mobile-max) {
+        font-size: 32px;
+        line-height: 44px;
+    }
 }
 
-.promo-btutton {
-    display: inline-block;
-    font-weight: 400;
+.promo-button {
+    @include button;
     font-size: 64px;
     line-height: 87px;
     margin-bottom: 215px;
     padding: 30px;
-    border-radius: 6px;
-    align-items: center;
-    text-decoration: none;
-    text-align: center;
-    color: #fff;
-    background-color: $color-light;
+    @media (max-width: $tablet-max) {
+        padding: 30px 35px;
+        font-weight: 400;
+        font-size: 42px;
+        line-height: 57px;
+    }
+    @media (max-width: $mobile-max) {
+        padding: 20px 14px;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 33px;
+    }
 }
