--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -12,3 +12,8 @@ $color-light:rgba(255, 45, 45, 1);
 $gap: 20px;
 $gap-half: calc($gap / 2);
 // breakpoints
+$mobile: 320px;
+$tablet: 768px;
+$desktop: 1280px;
+$mobile-max: $tablet - 1;
+$tablet-max: $desktop - 1;
